--- a/head.html
+++ b/head.html
@@ -7,8 +7,7 @@
 
 <h1> this is header </h1>
 <p>this is paragraph.</p>
-<a href= 'https://packages.ubuntu.com/search?keywords=htmldoc'> click here</p>
+<a href= 'https://packages.ubuntu.com/search?keywords=htmldoc'>for create link</a>
 
-<a>hello</a>
 </body>
 </html>
